Replace wrongly deleted "required" attribute + correct some select2 styles with dark mode

--- a/pod/enrichment/static/css/videojs-slides.css
+++ b/pod/enrichment/static/css/videojs-slides.css
@@ -196,4 +196,4 @@
 .enrich_document{color:var(--bs-orange)}
 .enrich_richtext{color:var(--bs-blue)}
 .enrich_weblink{color:var(--bs-red)}
-.enrich_embed{color:var(--bs-reen)}
+.enrich_embed{color:var(--bs-green)}
